Lab 4 added no webpack

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <li> <a href="task1/index.html">Лабораторная 1</a></li>
         <li> <a href="task2/index.html">Лабораторная 2</a></li>
         <li> <a href="task3/index.html">Лабораторная 3</a></li>
+        <li> <a href="task4/index.html">Лабораторная 4</a></li>
     </ol>
 </body>
