Lab 4 with bundle

--- a/task4/index.html
+++ b/task4/index.html
@@ -16,8 +16,9 @@
       <div class="second" id="right"></div>
 
    </div>
-   <script src="FirstTabScripts.js"></script>
-   <script src="SecondTabScripts.js"></script>
+   <!-- <script src="FirstTabScripts.js"></script>
+   <script src="SecondTabScripts.js"></script> -->
+   <script src="dist/main.js"></script>
 
    <!-- <link rel="stylesheet" href="style.css"> -->
 </body>
