--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <li> <a href="task2/index.html">Лабораторная 2</a></li>
         <li> <a href="task3/index.html">Лабораторная 3</a></li>
         <li> <a href="task4/index.html">Лабораторная 4</a></li>
+        <li> <a href="task5/index.html">Проект</a></li>
     </ol>
 </body>
